# savon

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmakecompile.sh
.github/workflows/: cmake-multi-platform.yml
assets/: savonv0.2.kra
src/: client.c  clientserver.h  codetoadapt_audible.cc  main.c  main.cc  server.c  video.c  webcam.c  webcam.h
src/cameras/: cameras.h  incam.c  incam.h  outcam.c  outcam.h  virtual.c
src/network/: client.c  clientserver.h  server.c
